--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -6,11 +6,11 @@
   }"
 >
   <div
-    class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0"
+    class="flex items-end backdrop-blur-[10px] justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0"
   >
     <!-- Modal BG Overlay -->
-    <div class="fixed inset-0 transition-opacity" (click)="closeModal()">
-      <div class="absolute inset-0 bg-gray-800 opacity-75"></div>
+    <div class="fixed inset-0" (click)="closeModal()">
+      <div class="absolute inset-0 overlay-gradient opacity-95 blur-sm"></div>
     </div>
 
     <!-- This element is to trick the browser into centering the modal contents. -->
@@ -19,10 +19,10 @@
     >
 
     <div
-      class="inline-block align-bottom bg-secondary rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
+      class="inline-block align-bottom card rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
     >
       <!-- Add margin if you want to see some of the overlay behind the modal-->
-      <div class="py-4 text-left px-6">
+      <div class="py-6 text-left px-6">
         <!--Title-->
         <div class="flex justify-between items-center pb-4">
           <ng-content select="[heading]"></ng-content>
