--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -3,6 +3,8 @@
   [type]="type"
   class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
   [placeholder]="placeholder"
+  [mask]="format"
+  [dropSpecialCharacters]="false"
 />
 <ng-container *ngIf="control.touched && control.dirty">
   <p
@@ -24,5 +26,12 @@
     *ngIf="control.errors?.email"
   >
     You must enter a valid email address
+  </p>
+  <p
+    class="text-white bg-red-500 my-2 p-2 rounded text-sm"
+    *ngIf="control.errors?.password"
+  >
+    Password must be at least 8 characters long, contain at least one number and
+    one letter and one special character.
   </p>
 </ng-container>
